apps/argocd/argocd/resources/metrics-service.patch.yml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-metrics
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/part-of: argocd
  annotations:
    prometheus.io/scrape: 'true'
